Avoid double wrapping library list items
HFP-45

--- a/styles/scss/application.scss
+++ b/styles/scss/application.scss
@@ -737,6 +737,11 @@ a {
       display: inline-block;
     }
   }
+
+  .h5p-li > .content > .library {
+    border: 0;
+    padding: 0;
+  }
 }
 
 .h5peditor-field-description,
